Modificado el dynamic search para añadir criterios de ordenacion